<resources>
    <string name="app_name">shaharProject</string>
    <string name="title_activity_service" translatable="false">activityService</string>
    <string name="base_hello">Hello</string>
    <string name="group_name">Group Name :</string>
    <string name="group_rate">Group Rate :</string>
    <string name="trainer_name">Trainer Name :</string>
    <string name="exit_header">Do You Want To Exit?</string>
    <string name="btn_y">Yes</string>
    <string name="btn_n">No</string>
    <string name="login_header">Login</string>
    <string name="user_hint">Type Username</string>
    <string name="pass_hint">Type Password</string>
    <string name="btn_send">Send</string>
    <string name="quit_header">Do you want to delete your account?</string>
    <string name="race_header">~ Create a Race ~</string>
    <string name="racename_hint">Type race name</string>
    <string name="raceadress_hint">Type the race adress</string>
    <string name="description_hint">Type Description</string>
    <string name="racedate">Select race date</string>
    <string name="choosetime">Choose Time</string>
    <string name="phone_hint">Type phone</string>
    <string name="btn_logo">Choose Logo</string>
    <string name="racedetails_header">Races</string>
    <string name="future">All Future Races</string>
    <string name="my">All My Races</string>
    <string name="past">All Past Races</string>
    <string name="rating_header">Ratings</string>
    <string name="rate_trainer">Rate Your Trainer</string>
    <string name="rate_group">Rate Your Group</string>
    <string name="register_header">~ Register ~</string>
    <string name="fn_hint">Type First Name</string>
    <string name="ln_hint">Type Last Name</string>
    <string name="f_gender">Female</string>
    <string name="m_gender">Male</string>
    <string name="gender_header">Gender :</string>
    <string name="birthdate">Select Day of Birth</string>
    <string name="email_hint">Type Email</string>
    <string name="btn_pic">Choose Picture</string>
    <string name="btn_trainee">trainee</string>
    <string name="btn_trainer">trainer</string>
    <string name="myrating_header">Show My Rating</string>
    <string name="trainer_show_rate">My Trainer Rate</string>
    <string name="group_show_rate">My Group Rate</string>
    <string name="date_of_start">Click for date of start</string>
    <string name="hight_hint">Type height</string>
    <string name="weight_hint">Type weight</string>
    <string name="btn_reg">Register</string>
    <string name="group_hint">Type Group ID</string>
    <string name="max_trainees_hint">Maximum Trainees</string>
    <string name="price_hint">Type price</string>
    <string name="groupinformation_header">Group Information</string>
    <string name="price">price :</string>
    <string name="opendate">Open Date :</string>
    <string name="Available_subscriptions">Available subscriptions</string>
    <string name="btn_back">Go back</string>
    <string name="btn_call">Call</string>
    <string name="raceinformation_header">Race Information</string>
    <string name="racename">Race name :</string>
    <string name="originator">Originator :</string>
    <string name="date_of_race">Competition Date :</string>
    <string name="time">Time :</string>
    <string name="adress">Adress :</string>
    <string name="description">Description :</string>
    <string name="result">Result :</string>
    <string name="exerciseheader">Exercise plan</string>
    <string name="exercisename">Exercise name:</string>
    <string name="exercisedate">Exercise Date:</string>
    <string name="starttime">Start Time:</string>
    <string name="exerciseadress">Exercise adress:</string>
    <string name="exercisedescription">Exercise description:</string>
    <string name="btnexit">Exit</string>
    <string name="home">Home</string>
    <string name="aboutus">About Us</string>
    <string name="utility">Utility</string>
    <string name="update">User Update</string>
    <string name="groupdata">Group Data</string>
    <string name="logout">Log Out</string>
    <string name="quit">Quit</string>
    <string name="showraces">Show races</string>
    <string name="openrace">Open Race</string>
    <string name="exercises">Exercises</string>
    <string name="music">Music</string>
    <string name="Exercisesattendancy">Exercises attendancy</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="exnot">Don\'t Forget the Exercise Tommorow!!</string>
    <string name="batterylow">Your Battery Percentage :</string>
    <string name="date">Date :</string>
</resources>
