<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="#d5fff3"


    >


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/aclonica"
        android:text="@string/groupinformation_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageVieww"
        android:layout_gravity="center"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@mipmap/ic_launcher" />



    <Button
        android:id="@+id/btnclose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/btn_back"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/groupname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/group_name"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtgroupname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="TextView"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_dark"

                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="TextView"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/opendate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_dark"

                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/opendate"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtopendate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="TextView"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/runners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/Available_subscriptions"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtrunners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="TextView"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/group_rate"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/aclonica"
                android:text="TextView"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btncontent"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_call"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/aclonica"/>

        </LinearLayout>
    </ScrollView>



    </LinearLayout>